--- a/common/header.html
+++ b/common/header.html
@@ -31,59 +31,16 @@
 							<div class="gnb-main-list" data-has-submenu="true">
 								<ul>
 									<li>
-										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">2Depth</button>
+										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">현재산불위험지수</button>
 										<!-- gnb-sub-list -->
 										<div class="gnb-sub-list">
 											<div class="gnb-sub-content">
 												<h2 class="sub-title">
-													2Depth title
-													<a href="#" class="krds-btn link basic small">
-														<span class="underline">바로가기</span>
-														<i class="svg-icon ico-angle right"></i>
-													</a>
+													현재산불위험지수
 												</h2>
-												<ul>
-													<li><a href="#">Last depth</a></li>
-													<li><button type="button">Last depth</button></li>
-												</ul>
-											</div>
-											<div class="gnb-sub-banner">
-												<span class="krds-badge bg-secondary">신규 서비스</span>
-												<button type="button" class="krds-btn medium text">메뉴명 <i class="svg-icon ico-angle right"></i></button>
 											</div>
 										</div>
 										<!-- //gnb-sub-list -->
-									</li>
-									<li>
-										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">2Depth</button>
-										<!-- gnb-sub-list -->
-										<div class="gnb-sub-list between">
-											<div class="gnb-sub-content">
-												<h2 class="sub-title">
-													2Depth title
-													<a href="#" class="krds-btn link basic small">
-														<span class="underline">바로가기</span>
-														<i class="svg-icon ico-angle right"></i>
-													</a>
-												</h2>
-												<ul>
-													<li><a href="#">Last depth</a></li>
-													<li><button type="button">Last depth</button></li>
-													<li><button type="button">Last depth</button></li>
-												</ul>
-											</div>
-											<div class="gnb-sub-banner">
-												<span class="krds-badge bg-secondary">신규 서비스</span>
-												<button type="button" class="krds-btn medium text">메뉴명 <i class="svg-icon ico-angle right"></i></button>
-											</div>
-										</div>
-										<!-- //gnb-sub-list -->
-									</li>
-									<li>
-										<a href="#" class="gnb-sub-trigger is-link" data-trigger="gnb">2Depth</a>
-									</li>
-									<li>
-										<a href="#" class="gnb-sub-trigger is-link external-link" data-trigger="gnb" target="_blank" title="새 창 열림">2Depth</a>
 									</li>
 								</ul>
 							</div>
@@ -100,54 +57,20 @@
 							<div class="gnb-main-list" data-has-submenu="true">
 								<ul>
 									<li>
-										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">2Depth</button>
+										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">산불위험등급</button>
 										<!-- gnb-sub-list -->
 										<div class="gnb-sub-list">
 											<div class="gnb-sub-content">
-												<h2 class="sub-title"><span>2Depth title</span></h2>
-												<ul class="type-description">
-													<li>
-														<h3 class="tit">
-															<a href="#" target="_blank" title="새 창 열림">3Depth title <i class="svg-icon ico-go"></i></a>
-														</h3>
-														<p class="txt">메뉴명과 메뉴에 관한 간략한 설명이 표시되는 스타일입니다.</p>
-													</li>
+												<h2 class="sub-title"><span>산불위험등급</span></h2>
+												<ul>
+													<li><a href="#">시도별</a></li>
+													<li><a href="#">시군구별</a></li>
+													<li><a href="#">동해안위험정보</a></li>
+													<li><a href="#">상세산불정보</a></li>
 												</ul>
-											</div>
-											<div class="gnb-sub-banner">
-												<span class="krds-badge bg-secondary">신규 서비스</span>
-												<button type="button" class="krds-btn medium text">메뉴명 <i class="svg-icon ico-angle right"></i></button>
 											</div>
 										</div>
 										<!-- //gnb-sub-list -->
-									</li>
-									<li>
-										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">2Depth</button>
-										<!-- gnb-sub-list -->
-										<div class="gnb-sub-list between">
-											<div class="gnb-sub-content">
-												<h2 class="sub-title"><span>2Depth title</span></h2>
-												<ul class="type-description">
-													<li>
-														<h3 class="tit">
-															<a href="#" target="_blank" title="새 창 열림">3Depth title <i class="svg-icon ico-go"></i></a>
-														</h3>
-														<p class="txt">메뉴명과 메뉴에 관한 간략한 설명이 표시되는 스타일입니다.</p>
-													</li>
-												</ul>
-											</div>
-											<div class="gnb-sub-banner">
-												<span class="krds-badge bg-secondary">신규 서비스</span>
-												<button type="button" class="krds-btn medium text">메뉴명 <i class="svg-icon ico-angle right"></i></button>
-											</div>
-										</div>
-										<!-- //gnb-sub-list -->
-									</li>
-									<li>
-										<a href="#" class="gnb-sub-trigger is-link" data-trigger="gnb">2Depth</a>
-									</li>
-									<li>
-										<a href="#" class="gnb-sub-trigger is-link external-link" data-trigger="gnb" target="_blank" title="새 창 열림">2Depth</a>
 									</li>
 								</ul>
 							</div>
@@ -157,33 +80,23 @@
 					</li>
 					
 					<li>
-						<button type="button" class="gnb-main-trigger" data-trigger="gnb">대형산불불위험에보</button>
+						<button type="button" class="gnb-main-trigger" data-trigger="gnb">대형산불위험예보</button>
 						<!-- gnb-toggle-wrap -->
 						<div class="gnb-toggle-wrap">
 							<!-- gnb-main-list -->
-							<div class="gnb-main-list">
-								<!-- gnb-sub-list -->
-								<div class="gnb-sub-list single-list between">
-									<div class="gnb-sub-content">
-										<h2 class="sub-title"><span>2Depth title</span></h2>
-										<ul>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-										</ul>
-									</div>
-									<div class="gnb-sub-banner">
-										<span class="krds-badge bg-secondary">신규 서비스</span>
-										<button type="button" class="krds-btn medium text">메뉴명 <i class="svg-icon ico-angle right"></i></button>
-									</div>
-								</div>
-								<!-- //gnb-sub-list -->
+							<div class="gnb-main-list" data-has-submenu="true">
+								<ul>
+									<li>
+										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">대형산불위험예보</button>
+										<!-- gnb-sub-list -->
+										<div class="gnb-sub-list">
+											<div class="gnb-sub-content">
+												<h2 class="sub-title"><span>대형산불위험예보</span></h2>
+											</div>
+										</div>
+										<!-- //gnb-sub-list -->
+									</li>
+								</ul>
 							</div>
 							<!-- //gnb-main-list -->
 						</div>
@@ -195,29 +108,19 @@
 						<!-- gnb-toggle-wrap -->
 						<div class="gnb-toggle-wrap">
 							<!-- gnb-main-list -->
-							<div class="gnb-main-list">
-								<!-- gnb-sub-list -->
-								<div class="gnb-sub-list single-list between">
-									<div class="gnb-sub-content">
-										<h2 class="sub-title"><span>2Depth title</span></h2>
-										<ul>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-										</ul>
-									</div>
-									<div class="gnb-sub-banner">
-										<span class="krds-badge bg-secondary">신규 서비스</span>
-										<button type="button" class="krds-btn medium text">메뉴명 <i class="svg-icon ico-angle right"></i></button>
-									</div>
-								</div>
-								<!-- //gnb-sub-list -->
+							<div class="gnb-main-list" data-has-submenu="true">
+								<ul>
+									<li>
+										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">과거자료검색</button>
+										<!-- gnb-sub-list -->
+										<div class="gnb-sub-list">
+											<div class="gnb-sub-content">
+												<h2 class="sub-title"><span>과거자료검색</span></h2>
+											</div>
+										</div>
+										<!-- //gnb-sub-list -->
+									</li>
+								</ul>
 							</div>
 							<!-- //gnb-main-list -->
 						</div>
@@ -229,29 +132,19 @@
 						<!-- gnb-toggle-wrap -->
 						<div class="gnb-toggle-wrap">
 							<!-- gnb-main-list -->
-							<div class="gnb-main-list">
-								<!-- gnb-sub-list -->
-								<div class="gnb-sub-list single-list between">
-									<div class="gnb-sub-content">
-										<h2 class="sub-title"><span>2Depth title</span></h2>
-										<ul>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-										</ul>
-									</div>
-									<div class="gnb-sub-banner">
-										<span class="krds-badge bg-secondary">신규 서비스</span>
-										<button type="button" class="krds-btn medium text">메뉴명 <i class="svg-icon ico-angle right"></i></button>
-									</div>
-								</div>
-								<!-- //gnb-sub-list -->
+							<div class="gnb-main-list" data-has-submenu="true">
+								<ul>
+									<li>
+										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">과거자료검색</button>
+										<!-- gnb-sub-list -->
+										<div class="gnb-sub-list">
+											<div class="gnb-sub-content">
+												<h2 class="sub-title"><span>과거자료검색</span></h2>
+											</div>
+										</div>
+										<!-- //gnb-sub-list -->
+									</li>
+								</ul>
 							</div>
 							<!-- //gnb-main-list -->
 						</div>
@@ -263,29 +156,19 @@
 						<!-- gnb-toggle-wrap -->
 						<div class="gnb-toggle-wrap">
 							<!-- gnb-main-list -->
-							<div class="gnb-main-list">
-								<!-- gnb-sub-list -->
-								<div class="gnb-sub-list single-list between">
-									<div class="gnb-sub-content">
-										<h2 class="sub-title"><span>2Depth title</span></h2>
-										<ul>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-											<li><a href="#">Last depth</a></li>
-										</ul>
-									</div>
-									<div class="gnb-sub-banner">
-										<span class="krds-badge bg-secondary">신규 서비스</span>
-										<button type="button" class="krds-btn medium text">메뉴명 <i class="svg-icon ico-angle right"></i></button>
-									</div>
-								</div>
-								<!-- //gnb-sub-list -->
+							<div class="gnb-main-list" data-has-submenu="true">
+								<ul>
+									<li>
+										<button type="button" class="gnb-sub-trigger" data-trigger="gnb">산불제대로알기</button>
+										<!-- gnb-sub-list -->
+										<div class="gnb-sub-list">
+											<div class="gnb-sub-content">
+												<h2 class="sub-title"><span>산불제대로알기</span></h2>
+											</div>
+										</div>
+										<!-- //gnb-sub-list -->
+									</li>
+								</ul>
 							</div>
 							<!-- //gnb-main-list -->
 						</div>
@@ -311,30 +194,6 @@
 					</ul>
 				</div>
 				<!-- //gnb-utils -->
-				<!-- gnb-login -->
-				<div class="gnb-login">
-					<!-- <span class="user">홍길동님</span>
-					<button type="button" class="krds-btn large text"><i class="svg-icon ico-logout"></i> 로그아웃</button> -->
-					<button type="button" class="krds-btn large text"><i class="svg-icon ico-log"></i> 로그인을 해주세요</button>
-				</div>
-				<!-- //gnb-login -->
-				<!-- gnb-service-menu -->
-				<div class="gnb-service-menu">
-					<a href="#" class="link">메뉴명</a>
-					<a href="#" class="link">메뉴명</a>
-					<a href="#" class="link">메뉴명</a>
-					<a href="#" class="link">메뉴명</a>
-				</div>
-				<!-- gnb-service-menu -->
-				<!-- 검색 -->
-				<div class="sch-input">
-					<input type="text" class="krds-input" placeholder="찾고자 하는 메뉴명을 입력해 주세요" title="찾고자 하는 메뉴명 입력" />
-					<button type="button" class="krds-btn medium icon ico-search">
-						<span class="sr-only">검색</span>
-						<i class="svg-icon ico-sch"></i>
-					</button>
-				</div>
-				<!-- //검색 -->
 			</div>
 			<!-- //gnb-header -->
 			
@@ -345,105 +204,53 @@
 					<div class="menu-wrap">
 						<ul>
 							<li>
-								<a href="#mGnb-anchor1" class="gnb-main-trigger">1Depth</a>
+								<a href="#mGnb-anchor1" class="gnb-main-trigger">현재산불위험지수</a>
 							</li>
 							<li>
-								<a href="#mGnb-anchor2" class="gnb-main-trigger">1Depth</a>
+								<a href="#mGnb-anchor2" class="gnb-main-trigger">산불위험등급</a>
 							</li>
 							<li>
-								<a href="#mGnb-anchor3" class="gnb-main-trigger">1Depth</a>
+								<a href="#mGnb-anchor3" class="gnb-main-trigger">대형산불위험예보</a>
 							</li>
 							<li>
-								<a href="#mGnb-anchor4" class="gnb-main-trigger">1Depth</a>
+								<a href="#mGnb-anchor4" class="gnb-main-trigger">산불위험통계</a>
 							</li>
 							<li>
-								<a href="#mGnb-anchor5" class="gnb-main-trigger">1Depth</a>
+								<a href="#mGnb-anchor5" class="gnb-main-trigger">과거자료검색</a>
+							</li>
+							<li>
+								<a href="#mGnb-anchor5" class="gnb-main-trigger">산불제대로알기</a>
 							</li>
 						</ul>
 					</div>
 					<div class="submenu-wrap">
 						<div class="gnb-sub-list" id="mGnb-anchor1">
-							<h2 class="sub-title">1Depth</h2>
+							<h2 class="sub-title">현재산불위험지수</h2>
+						</div>
+						<div class="gnb-sub-list" id="mGnb-anchor1">
+							<h2 class="sub-title">산불위험등급</h2>
 							<ul>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
+								<li><a href="#" class="gnb-sub-trigger">시도별</a></li>
+								<li><a href="#" class="gnb-sub-trigger">시군구별</a></li>
+								<li><a href="#" class="gnb-sub-trigger">동해안위험정보</a></li>
+								<li><a href="#" class="gnb-sub-trigger">상세산불위험정보</a></li>
 							</ul>
 						</div>
 						<div class="gnb-sub-list" id="mGnb-anchor2">
-							<h2 class="sub-title">1Depth</h2>
-							<ul>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-							</ul>
+							<h2 class="sub-title">대형산불위험예보</h2>
 						</div>
 						<div class="gnb-sub-list" id="mGnb-anchor3">
-							<h2 class="sub-title">1Depth</h2>
-							<ul>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li>
-									<a href="#" class="gnb-sub-trigger has-depth3">2Depth</a>
-									<div class="depth3-wrap">
-										<ul>
-											<li>
-												<a href="#" class="depth3-trigger has-depth4">3Depth</a>
-												<div class="depth4-wrap">
-													<div class="depth4-head">
-														<button type="button" class="krds-btn icon trigger-prev">
-															<span class="sr-only">이전화면</span>
-															<i class="svg-icon ico-angle left"></i>
-														</button>
-														<button type="button" class="krds-btn icon trigger-close">
-															<span class="sr-only">전체메뉴 닫기</span>
-															<i class="svg-icon ico-popup-close"></i>
-														</button>
-													</div>
-													<ul class="depth4-body">
-														<h4 class="sub-title">4Depth title</h4>
-														<ul class="depth4-ul">
-															<li><a href="#">depth title</a></li>
-															<li><a href="#">depth title</a></li>
-															<li><a href="#">depth title</a></li>
-															<li><a href="#">depth title</a></li>
-														</ul>
-													</ul>
-												</div>
-											</li>
-											<li><a href="#" class="depth3-trigger">3Depth</a></li>
-											<li><a href="#" class="depth3-trigger">3Depth</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
+							<h2 class="sub-title">산불위험통계</h2>
 						</div>
 						<div class="gnb-sub-list" id="mGnb-anchor4">
-							<h2 class="sub-title">1Depth</h2>
-							<ul>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-							</ul>
+							<h2 class="sub-title">과거자료검색</h2>
 						</div>
 						<div class="gnb-sub-list" id="mGnb-anchor5">
-							<h2 class="sub-title">1Depth</h2>
-							<ul>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-								<li><a href="#" class="gnb-sub-trigger">2Depth</a></li>
-							</ul>
+							<h2 class="sub-title">산불제대로알기</h2>
 						</div>
 					</div>
 				</div>
 				<!-- //gnb-menu -->
-				<!-- gnb-bottom -->
-				<div class="gnb-bottom">
-					<a href="#" class="krds-btn medium text">메뉴명 <i class="svg-icon ico-angle right"></i></a>
-					<a href="#" class="krds-btn medium text" target="_blank" title="새 창 열기"> 메뉴명 <i class="svg-icon ico-go"></i></a>
-				</div>
-				<!-- //gnb-bottom -->
 			</div>
 			<!-- //gnb-body -->
 			
