2025-10-15 sub04, 05 html 추가

--- a/sub05.html
+++ b/sub05.html
@@ -11,7 +11,7 @@
 	<script src="resources/js/plugin/swiper-bundle.min.js" defer></script>
 	<script src="resources/js/component/ui-script.js" defer></script>
 
-	<title>산불장기예보</title>
+	<title>소각산불징후예보목록</title>
 
 </head>
 <body>
@@ -27,23 +27,70 @@
 			<nav class="krds-breadcrumb-wrap" aria-label="현재 경로" id="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="home"><a href="#" class="txt">홈</a></li>
-					<li><a href="#" class="txt">산불장기예보</a></li>
+					<li><a href="#" class="txt">소각산불징후예보목록</a></li>
 				</ol>
 			</nav>
 			<!-- breadcrumb -->
 			<!-- page-title -->
 			<div class="page-title-wrap">
-				<h1>산불장기예보</h1>
+				<h1>소각산불징후예보목록</h1>
 			</div>
 			<!-- page-title -->
 			<!-- text input -->
 			<div class="search-section">
 				<div>
 					<div class="fieldset">
+						<!-- radio button -->
+						<div class="form-group label">
+						 	<div class="form-tit">
+								<label for="select_name">검색범위</label>
+							</div>
+							<div class="krds-check-area">
+								<div class="krds-form-check medium">
+									<input type="radio" name="rdo_2-1" id="rdo_2-2" checked>
+									<label for="rdo_2-2">사용</label>
+								</div>
+								<div class="krds-form-check medium">
+									<input type="radio" name="rdo_2-1" id="rdo_2-2">
+									<label for="rdo_2-2">미사용</label>
+								</div>
+							</div>
+						</div>
+						<!-- //radio button -->
+						<div class="form-group label">
+							<div class="form-tit">
+								<label for="select_name">관측지역</label>
+							</div>
+								<div class="form-conts">
+									<select id="select_size_medium" class="krds-form-select medium" title="선택">
+										<option value="" selected>전체</option>
+										<option value="">1</option>
+										<option value="">2</option>
+										<option value="">3</option>
+										<option value="">4</option>
+									</select>
+								</div>
+						</div>
+						<!-- //폼그룹 -->	
+						<div class="form-group label">
+							<div class="form-tit">
+								<label for="select_name">위험등급선택</label>
+							</div>
+							<div class="form-conts">
+								<select id="select_size_medium" class="krds-form-select medium" title="선택">
+									<option value="" selected>전체</option>
+									<option value="">1</option>
+									<option value="">2</option>
+									<option value="">3</option>
+									<option value="">4</option>
+								</select>
+							</div>
+						</div>
+						<!-- //폼그룹 -->	
 						<!-- calendar -->
 						<div class="form-group label">
 							<div class="form-tit">
-								<label for="select_name">레이블</label>
+								<label for="select_name">날짜선택</label>
 							</div>
 							<div class="form-conts calendar-conts">
 								<div class="calendar-input">
@@ -271,24 +318,7 @@
 							</div>
 						</div>
 						<!-- //calendar -->
-						<div class="form-group">
-							<div class="form-tit">
-								<div class="form-conts">
-									<select id="select_size_medium" class="krds-form-select medium" title="선택">
-										<option value="" selected>시간전체</option>
-										<option value="">3시</option>
-										<option value="">6시</option>
-										<option value="">9시</option>
-										<option value="">12시</option>
-										<option value="">15시</option>
-										<option value="">18시</option>
-										<option value="">21시</option>
-										<option value="">24시</option>
-									</select>
-								</div>
-							</div>
-						</div>
-						<!-- //폼그룹 -->						
+					
 					</div>
 				</div>
 				<div class="search-list-bottom line">
@@ -306,122 +336,108 @@
 				<table class="tbl col data">
 					<caption>SNS산불정보</caption>
 					<colgroup>
-						<col style="width: 20%;">
-						<col style="width: 20%;">
-						<col style="width: 20%;">
-						<col style="width: 20%;">
-						<col style="width: 20%;">
+						<col style="width: 16.666%;">
+						<col style="width: 16.666%;">
+						<col style="width: 16.666%;">
+						<col style="width: 16.666%;">
+						<col style="width: 16.666%;">
+						<col style="width: 16.666%;">
 					</colgroup>
 					<thead>
 						<tr>
-							<th scope="col">분석일자</th>
-							<th scope="col">Result value</th>
-							<th scope="col">Top order</th>
-							<th scope="col">Top%</th>
-							<th scope="col">Danger Level</th>
+							<th scope="col">일자</th>
+							<th scope="col">지역</th>
+							<th scope="col">30년 평년 최고기온(°C)</th>
+							<th scope="col">오늘 상대습도(%)</th>
+							<th scope="col">오늘 최고기온(°C)</th>
+							<th scope="col">구분</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
-						</tr>
-						<tr>
-							<th scope="row">2024년 12월</th>
-							<td>-0.79552</td>
-							<td>21/29</td>
-							<td>72.4138</td>
-							<td>낮음</td>
+							<th scope="row">2025-10-01</th>
+							<td>서울</td>
+							<td>21.0</td>
+							<td>90.0</td>
+							<td>15.0</td>
+							<td>징후없음</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
 			<!-- //table -->
-
-			<!-- pagination -->
-			<div class="krds-pagination">
-				<span class="page-navi prev disabled" href="#">이전</span>
-				<div class="page-links">
-					<a class="page-link" href="#">1</a>
-					<a class="page-link" href="#">2</a>
-					<a class="page-link" href="#">3</a>
-					<a class="page-link active" href="#"><span class="sr-only">현재페이지 </span>4</a>
-					<a class="page-link" href="#">5</a>
-					<a class="page-link" href="#">6</a>
-					<a class="page-link" href="#">7</a>
-					<a class="page-link" href="#">8</a>
-					<span class="page-link link-dot"></span>
-					<a class="page-link" href="#">99</a>
-				</div>
-				<a class="page-navi next" href="#">다음</a>
-			</div>
-			<!-- //pagination -->
 		</div>
 		<!-- 컨텐츠 영역-->
 	</div>
