--- a/main.html
+++ b/main.html
@@ -127,6 +127,8 @@
 								더보기<i class="svg-icon ico-plus"></i>
 							</div>
 						</div>
+						<div class="main-inner">
+						</div>
 					</div>
 					<div class="main-info ">
 						<div class="title-justify">
@@ -135,7 +137,7 @@
 								더보기<i class="svg-icon ico-plus"></i>
 							</div>
 						</div>
-						<div>
+						<div class="main-inner">
 							<ul class="region-text">
 								<li>
 									시도
@@ -163,6 +165,19 @@
 				<div class="">
 					<div class="main-info">
 						<h3>최고등급 위험지역</h3>
+						<div>
+							<ul class="mnotice">
+									<li>
+										<em>서울특별시 중구</em><p>80.00</p><span>매우높음</span>
+									</li>
+									<li>
+										<em>강원특별자치도 강릉시</em><p>70.00</p><span>높음</span>
+									</li>
+									<li>
+										<em>서울특별시 동대문구</em><p>60.00</p><span>다소높음</span>
+									</li>
+              </ul>
+						</div>
 					</div>
 					<div class="main-info">
 						<div class="title-justify">
@@ -170,9 +185,25 @@
 							<div class="main-more">
 								더보기<i class="svg-icon ico-plus"></i>
 							</div>
-							<div>
-
-							</div>
+						</div>
+						<div>
+							<ul class="mnotice">
+									<li>
+											<a href="javascript:;">
+													<p>산불위험예보시스템 홈페이지</p><span>2024.11.17</span>
+											</a>
+									</li>
+									<li>
+											<a href="javascript:;">
+													<p>금일 산불발생위험예측</p><span>2024.11.25</span>
+											</a>
+									</li>
+									<li>
+											<a href="javascript:;">
+													<p>산불위험예보 웹 페이지 오류 해결</p><span>2024.11.14</span>
+											</a>
+									</li>
+              </ul>
 						</div>
 						<div>
 							<p>현재실황:<span>2025년 09월 11일 08시 30분 발표</span></p>
